--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
         <ul class="faculdade-lista">
           <li class="faculdade">
-            <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Administração de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
+            <span class="faculdade-tipo">Graduação</span>
+            <h3 class="faculdade-curso">Análise e Desenvolvimento de Sistemas</h3>
+            <span class="faculdade-instituicao">Anhembi Morumbi</span>
           </li>
           <li class="faculdade">
             <span class="faculdade-tipo">Tecnólogo</span>
