--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Lobo - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
