--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li>lobo@email.com</li>
+        <li>felipecavalieridesign@email.com</li>
         <li>+55 21 9999-9999</li>
-        <li><a href="/">@instagram</a></li>
+        <li><a href="/">@fecavalieridesign</a></li>
       </ul>
       <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
     </div>
