mudança no direito autoral

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <li>+55 21 9999-9999</li>
         <li><a href="/">@fecavalieridesign</a></li>
       </ul>
-      <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
+      <p class="footer-copy">Felipe Cavalieri. Alguns direitos reservados.</p>
     </div>
   </footer>
 
