mudança no gmail de contato

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li>felipecavalieridesign@email.com</li>
+        <li>felipecavalieridesign@gmail.com</li>
         <li>+55 21 9999-9999</li>
         <li><a href="/">@fecavalieridesign</a></li>
       </ul>
