mudanca na instituicao

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </li>
           <li class="faculdade">
             <span class="faculdade-tipo">Tecnólogo</span>
-            <h3 class="faculdade-curso">Design Digital</h3>
+            <h3 class="faculdade-curso">Origamid</h3>
             <span class="faculdade-instituicao">Infnet</span>
           </li>
           <li class="faculdade">
