mudanca no link footer-contato

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <ul class="footer-contato">
         <li>felipecavalieridesign@gmail.com</li>
         <li>+55 21 9999-9999</li>
-        <li><a href="/">@fecavalieridesign</a></li>
+        <li><a href="https://www.instagram.com/cavalieri_design/">@fecavalieridesign</a></li>
       </ul>
       <p class="footer-copy">Felipe Cavalieri. Alguns direitos reservados.</p>
     </div>
