--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
           <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
-              <li>Inglês <span>/ Fluente</span></li>
-              <li>Espanhol <span>/ Intermediário</span></li>
+              <li>Inglês <span>/ Intermediário</span></li>
             </ul>
           </div>
         </div>
