mudanca no title

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lobo - Desenvolvedor e Designer</title>
-  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro">
+  <title>Felipe Cavalieri - Desenvolvedor e Designer</title>
+  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado em Sorocaba">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
