--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div>
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
       <p>Localizado em Sorocaba</p>
+      <div id="row"></div>
     </div>
   </main>
 
