--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main class="introducao">
     <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
-    <div>
+    <div id="intro">
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
       <p>Localizado em Sorocaba</p>
     </div>
